<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <include
            android:id="@+id/layout_line1"
            layout="@layout/word_box_line"/>
        <include
            android:id="@+id/layout_line2"
            layout="@layout/word_box_line"/>
        <include
            android:id="@+id/layout_line3"
            layout="@layout/word_box_line"/>
        <include
            android:id="@+id/layout_line4"
            layout="@layout/word_box_line"/>
        <include
            android:id="@+id/layout_line5"
            layout="@layout/word_box_line"/>
        <include
            android:id="@+id/layout_line6"
            layout="@layout/word_box_line"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            tools:text="Syncing" />

        <Button
            android:id="@+id/button_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sync_word_dict" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/seed">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_seed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:text="@string/clear_and_random"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/start_word">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_startWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_guess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:text="@string/guess" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>